[gd_scene load_steps=2 format=3 uid="uid://c4result"]

[ext_resource type="Script" path="res://scripts/result.gd" id="1_result"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_result")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "ゲーム結果"
horizontal_alignment = 1

[node name="Rank1" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="Rank2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = ""
horizontal_alignment = 1

[node name="Rank3" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = ""
horizontal_alignment = 1

[node name="Rank4" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

[node name="YourResultLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
text = ""
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 55)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "メニューに戻る"
